<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="application_name" translateable="false">Trebuchet</string>
    <string name="application_copyright">Copyright \u00A9 CyanogenMod 2012</string>
    <string name="application_version">0.1</string>
    <string name="uid_name">Android Core Apps</string>
    <string name="folder_name"></string>
    <string name="chooser_wallpaper">Choose wallpaper from</string>
    <string name="wallpaper_instructions">Set wallpaper</string>
    <string name="pick_wallpaper">Wallpapers</string>
    <string name="activity_not_found">App isn\'t installed.</string>
    <string name="widgets_tab_label">Widgets</string>
    <string name="long_press_widget_to_add">Touch &amp; hold to pick up a widget.</string>
    <string name="market">Shop</string>
    <string name="menu">Menu</string>
    <string name="widget_dims_format" translatable="false">%1$d x %2$d</string>
    <string name="external_drop_widget_pick_format" translatable="false">%1$s (%2$d x %3$d)</string>
    <string name="external_drop_widget_error">Couldn\'t drop item onto this Home screen.</string>
    <string name="external_drop_widget_pick_title">Choose widget to create</string>
    <string name="rename_folder_label">Folder name</string>
    <string name="rename_folder_title">Rename folder</string>
    <string name="rename_action">OK</string>
    <string name="cancel_action">Cancel</string>
    <string name="menu_item_add_item">Add to Home screen</string>
    <string name="group_applications">Apps</string>
    <string name="group_shortcuts">Shortcuts</string>
    <string name="group_widgets">Widgets</string>
    <string name="group_wallpapers">Wallpapers</string>
    <string name="out_of_space">No more room on this Home screen.</string>
    <string name="invalid_hotseat_item">This widget is too large for the dock.</string>
    <string name="shortcut_installed">Shortcut \"<xliff:g id="name" example="Browser">%s</xliff:g>\" created.</string>
    <string name="shortcut_uninstalled">Shortcut \"<xliff:g id="name" example="Browser">%s</xliff:g>\" was removed.</string>
    <string name="shortcut_duplicate">Shortcut \"<xliff:g id="name" example="Browser">%s</xliff:g>\" already exists.</string>
    <string name="title_select_shortcut">Select shortcut</string>
    <string name="title_select_application">Choose app</string>
    <string name="all_apps_button_label">Apps</string>
    <string name="all_apps_home_button_label">Home</string>
    <string name="delete_zone_label_workspace">Remove</string>
    <string name="delete_zone_label_all_apps">Uninstall</string>
    <string name="delete_target_label">Remove</string>
    <string name="cancel_target_label">Cancel</string>
    <string name="delete_target_uninstall_label">Uninstall</string>
    <string name="info_target_label">App info</string>
    <string name="accessibility_search_button">Search</string>
    <string name="accessibility_voice_search_button">Voice Search</string>
    <string name="accessibility_all_apps_button">Apps</string>
    <string name="accessibility_delete_button">Remove</string>
    <string name="delete_zone_label_all_apps_system_app">Uninstall update</string>
    <string name="menu_add">Add</string>
    <string name="menu_manage_apps">Manage Apps</string>
    <string name="menu_market">Google Play</string>
    <string name="menu_wallpaper">Wallpaper</string>
    <string name="menu_search">Search</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_settings">System Settings</string>
    <string name="menu_preferences">Trebuchet Settings</string>
    <string name="menu_help">Help</string>
    <string name="menu_apps_sort_title">Name</string>
    <string name="menu_apps_sort_install_date">Install Date</string>
    <string name="help_url" translatable="false"></string>
    <string name="cab_menu_delete_app">Uninstall app</string>
    <string name="cab_menu_app_info">App details</string>
    <string name="cab_app_selection_text">1 app selected</string>
    <string name="cab_widget_selection_text">1 widget selected</string>
    <string name="cab_folder_selection_text">1 folder selected</string>
    <string name="cab_shortcut_selection_text">1 shortcut selected</string>
    <string name="permlab_install_shortcut">install shortcuts</string>
    <string name="permdesc_install_shortcut">Allows an app to add
        shortcuts without user intervention.</string>
    <string name="permlab_uninstall_shortcut">uninstall shortcuts</string>
    <string name="permdesc_uninstall_shortcut">Allows an app to remove
        shortcuts without user intervention.</string>
    <string name="permlab_read_settings">read Home settings and shortcuts</string>
    <string name="permdesc_read_settings">Allows an app to read the settings and
        shortcuts in Home.</string>
    <string name="permlab_write_settings">write Home settings and shortcuts</string>
    <string name="permdesc_write_settings">Allows an app to change the settings and
        shortcuts in Home.</string>
    <string name="gadget_error_text">Problem loading widget</string>
    <string name="uninstall_system_app_text">This is a system app and can\'t be uninstalled.</string>
    <string name="dream_name">Rocket Launcher</string>
    <string name="folder_hint_text">Unnamed Folder</string>
    <string name="default_scroll_format">Page %1$d of %2$d</string>
    <string name="workspace_scroll_format">Workspace %1$d of %2$d</string>
    <string name="apps_customize_apps_scroll_format">Apps page %1$d of %2$d</string>
    <string name="apps_customize_widgets_scroll_format">Widgets page %1$d of %2$d</string>
    <string name="workspace_cling_title">Make yourself at home</string>
    <string name="workspace_cling_move_item">You can put your favorite apps here.</string>
    <string name="workspace_cling_open_all_apps">To see all your apps, touch the circle.</string>
    <string name="all_apps_cling_title">Choose some apps</string>
    <string name="all_apps_cling_add_item">To add an app to your Home screen, touch &amp; hold it.</string>
    <string name="all_apps_sort_cling_title">Sort your apps</string>
    <string name="all_apps_sort_cling_add_item">Touch &amp; hold the Apps tab to select your sort mode</string>
    <string name="folder_cling_title">Organize your apps with folders</string>
    <string name="folder_cling_move_item">To move an app, touch &amp; hold it.</string>
    <string name="preferences_interface_homescreen_general_category">General</string>
    <string name="preferences_interface_homescreen_general_default_screen_title">Default screen</string>
    <string name="preferences_interface_homescreen_general_default_screen_summary">Choose the default homescreen</string>
    <string name="preferences_interface_homescreen_general_grid_title">Grid Size</string>
    <string name="preferences_interface_homescreen_general_grid_summary">Choose the number of rows/columns on the homescreen</string>
    <string name="preferences_interface_homescreen_general_grid_rows_title">Rows</string>
    <string name="preferences_interface_homescreen_general_grid_columns_title">Columns</string>
    <string name="preferences_interface_homescreen_general_search_title">Search bar</string>
    <string name="preferences_interface_homescreen_general_resize_any_widget_title">Resize any widget</string>
    <string name="preferences_interface_homescreen_general_hide_icon_labels_summary">Hide homescreen icon labels</string>
    <string name="preferences_interface_homescreen_scrolling_category">Scrolling</string>
    <string name="preferences_interface_homescreen_indicator_background_title">Bottom/right dock divider</string>
    <string name="preferences_interface_homescreen_general_hotseat_apps">Dock app spaces</string>
    <string name="preferences_interface_homescreen_general_hotseat_apps_summary">Number of dock app spaces</string>
    <string name="preferences_interface_homescreen_general_hotseat_all_apps">All apps button position in dock</string>
    <string name="preferences_interface_homescreen_general_hotseat_all_apps_summary">Position of all apps button</string>
    <string name="preferences_interface_homescreen_general_show_hotseat_title">Dock</string>
    <string name="preferences_interface_homescreen_general_show_hotseat_allapps_title">All apps button in dock</string>
    <string name="preferences_interface_drawer_background_category">Drawer Background</string>
    <string name="preferences_interface_drawer_background_show_wallpaper_title">Transparent background</string>
    <string name="preferences_interface_drawer_topbar_hide_topbar_title">Hide tab bar</string>
    <string name="preferences_interface_drawer_menu_button_title">Show menu button</string>
    <string name="preferences_interface_drawer_market_button_title">Show market button</string>
    <string name="preferences_interface_dock_background_title">Show background</string>
    <string name="preferences_interface_tablet_combined_category">Search bar disabled options</string>
    <string name="preferences_interface_tablet_search_category">Search bar</string>
    <string name="preferences_interface_tablet_show_workspace_allapps_title">Apps bar</string>
    <string name="preferences_interface_tablet_center_allapps_title">Center the apps bar</string>
    <string name="preferences_interface_tablet_workspace_combined_bar_title">Show search buttons in the apps bar</string>
    <string name="preferences_interface_tablet_all_apps_corner_title">Apps bar position</string>
    <string name="preferences_interface_tablet_all_apps_corner_summary">Choose the all apps bar corner</string>
    <string name="preferences_interface_tablet_search_corner_title">Search bar position</string>
    <string name="preferences_interface_tablet_search_corner_summary">Choose the search drop bar corner</string>
    <string name="preferences_interface_tablet_page_controls_title">Hide app and search bars</string>
    <string name="preferences_interface_tablet_dock_divider_two_title">Top/left dock divider</string>
    <string name="preferences_interface_tablet_icons_title">Smaller app icons</string>
    <string name="preferences_interface_tablet_dock_icon_labels_title">Show dock icon labels</string>
    <string name="preferences_interface_tablet_button_dividers_title">Button dividers</string>
    <string name="preferences_interface_gestures_homescreen_category">Homescreen gestures</string>
    <string name="preferences_interface_gestures_drawer_category">Drawer gestures</string>
    <string name="preferences_interface_gestures_double_tap_title">Double tap</string>
    <string name="preferences_interface_gestures_swipe_up_title">Swipe up</string>
    <string name="preferences_interface_gestures_swipe_down_title">Swipe down</string>
    <string name="preferences_interface_gestures_app_bar_category">Apps bar gestures</string>
    <string name="preferences_interface_gestures_app_bar_long_click">Long click</string>
    <string name="preferences_interface_general_orientation_title">Auto-rotate screen</string>
    <string name="preferences_interface_tablet_buttons_title">Apps bar buttons</string>
    <string name="preferences_interface_tablet_custom_one_title">Button one</string>
    <string name="preferences_interface_tablet_custom_two_title">Button two</string>
    <string name="preferences_interface_tablet_custom_three_title">Button three</string>
    <string name="preferences_interface_tablet_custom_four_title">Button four</string>
    <string name="preferences_interface_tablet_custom_five_title">Button five</string>
    <string name="preferences_interface_tablet_custom_six_title">Button six</string>
    <string name="preferences_interface_tablet_custom_seven_title">Button seven</string>
    <string name="preferences_interface_tablet_custom_eight_title">Button eight</string>
</resources>