<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:launcher="http://schemas.android.com/apk/res/com.android.launcher">

            <PreferenceCategory android:title="@string/preferences_interface_homescreen_general_category"
                android:key="ui_homescreen_general">
                <CheckBoxPreference android:key="ui_general_orientation"
                    android:title="@string/preferences_interface_general_orientation_title"
                    android:defaultValue="true" />
                <CheckBoxPreference android:key="ui_homescreen_general_resize_any_widget"
                    android:title="@string/preferences_interface_homescreen_general_resize_any_widget_title"
                    android:defaultValue="true" />
                <com.android.launcher2.preference.NumberPickerPreference android:key="ui_homescreen_default_screen"
                    android:title="@string/preferences_interface_homescreen_general_default_screen_title"
                    android:summary="@string/preferences_interface_homescreen_general_default_screen_summary"
                    android:defaultValue="3"
                    launcher:max="5"
                    launcher:min="1" />
                <com.android.launcher2.preference.AutoDoubleNumberPickerPreference android:key="ui_homescreen_grid"
                    android:title="@string/preferences_interface_homescreen_general_grid_title"
                    android:summary="@string/preferences_interface_homescreen_general_grid_summary"
                    launcher:pickerTitle1="@string/preferences_interface_homescreen_general_grid_rows_title"
                    launcher:pickerTitle2="@string/preferences_interface_homescreen_general_grid_columns_title"
                    launcher:defaultValue1="6"
                    launcher:defaultValue2="6"
                    launcher:max1="6"
                    launcher:min1="1"
                    launcher:max2="6"
                    launcher:min2="1" />
                <CheckBoxPreference android:key="ui_homescreen_general_hide_icon_labels"
                    android:title="@string/preferences_interface_homescreen_general_hide_icon_labels_summary" />
            </PreferenceCategory>

</PreferenceScreen>
