<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:launcher="http://schemas.android.com/apk/res/com.cyanogenmod.trebuchet">

        <PreferenceCategory android:key="ui_dock"
            android:title="@string/preferences_interface_homescreen_general_category">
                <CheckBoxPreference android:key="ui_homescreen_general_show_hotseat"
                    android:title="@string/preferences_interface_homescreen_general_show_hotseat_title" />
                <CheckBoxPreference android:key="ui_homescreen_indicator_background"
                    android:dependency="ui_homescreen_general_show_hotseat"
                    android:title="@string/preferences_interface_homescreen_indicator_background_title" />
                <CheckBoxPreference android:key="ui_homescreen_tablet_dock_divider_two"
                    android:dependency="ui_homescreen_general_show_hotseat"
                    android:title="@string/preferences_interface_tablet_dock_divider_two_title" />
                <com.cyanogenmod.trebuchet.preference.NumberPickerPreference
                    android:key="ui_hotseat_apps"
                    android:dependency="ui_homescreen_general_show_hotseat"
                    android:title="@string/preferences_interface_homescreen_general_hotseat_apps"
                    android:summary="@string/preferences_interface_homescreen_general_hotseat_apps_summary"
                    android:defaultValue="5"
                    launcher:max="5"
                    launcher:min="1" />
                <CheckBoxPreference android:key="ui_homescreen_general_show_hotseat_allapps"
                    android:dependency="ui_homescreen_general_show_hotseat"
                    android:title="@string/preferences_interface_homescreen_general_show_hotseat_allapps_title" />
                <com.cyanogenmod.trebuchet.preference.AutoNumberPickerPreference
                    android:key="ui_hotseat_all_apps"
                    android:title="@string/preferences_interface_homescreen_general_hotseat_all_apps"
                    android:summary="@string/preferences_interface_homescreen_general_hotseat_all_apps_summary"
                    android:dependency="ui_homescreen_general_show_hotseat_allapps"
                    android:defaultValue="0"
                    launcher:maxExternal="ui_hotseat_apps"
                    launcher:max="9"
                    launcher:min="1" />
                <CheckBoxPreference android:key="ui_hotseat_background"
                    android:dependency="ui_homescreen_general_show_hotseat"
                    android:title="@string/preferences_interface_dock_background_title"
                    android:defaultValue="true" />
            </PreferenceCategory>

</PreferenceScreen>
