<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:launcher="http://schemas.android.com/apk/res/com.android.launcher2">
            <PreferenceCategory android:title="@string/preferences_interface_drawer_background_category">
                <CheckBoxPreference android:key="ui_drawer_background_show_wallpaper"
                    android:title="@string/preferences_interface_drawer_background_show_wallpaper_title"
                    android:defaultValue="false" />
            </PreferenceCategory>
            <PreferenceCategory android:title="@string/preferences_interface_drawer_tab_category">
                <CheckBoxPreference android:key="ui_drawer_hide_topbar"
                    android:title="@string/preferences_interface_drawer_topbar_hide_topbar_title"
                    android:disableDependentsState="true"
                    android:defaultValue="false" />
                <CheckBoxPreference android:key="ui_drawer_market_button"
                    android:title="@string/preferences_interface_drawer_market_button_title"
                    android:dependency="ui_drawer_hide_topbar"
                    android:defaultValue="true" />
                <CheckBoxPreference android:key="ui_drawer_menu_button"
                    android:title="@string/preferences_interface_drawer_menu_button_title"
                    android:dependency="ui_drawer_hide_topbar"
                    android:defaultValue="true" />
            </PreferenceCategory>
</PreferenceScreen>
